@@ -19,10 +19,12 @@ env:
   - DJANGO=1.10 DB=pg
   - DJANGO=1.11 DB=pg
   - DJANGO=2.0 DB=pg
+  - DJANGO=2.1 DB=pg
 
   - DJANGO=1.10 DB=mysql
   - DJANGO=1.11 DB=mysql
   - DJANGO=2.0 DB=mysql
+  - DJANGO=2.1 DB=mysql
 
 
 matrix:
