@@ -70,19 +70,31 @@ while passing into the context the object that is going to be saved (``target``)
 
 .. setting:: CONCURRENCY_IGNORE_DEFAULT
 
+
+
 IGNORE_DEFAULT
 --------------
 .. versionadded:: 1.2
+.. versionchanged:: 1.5
 
 Default: ``True``
 
-Determines whether a default version number is ignored or used in a concurrency check.  While this
-configuration defaults to True for backwards compatibility, this setting can cause omitted version
-numbers to pass concurrency checks. New implementations are recommended to set this to ``False``.
-
-.. note:: For security reasons, starting from version 1.5, default value will be ``False``.
+.. seealso:: VERSION_FIELD_REQUIRED
 
 
+
+.. setting:: CONCURRENCY_VERSION_FIELD_REQUIRED
+
+
+VERSION_FIELD_REQUIRED
+----------------------
+.. versionadded:: 1.5
+
+Default: ``True``
+
+Determines whether version number is mandatory in any save operation.
+Setting this flag to ``False`` can cause omitted version
+numbers to pass concurrency checks.
 
 
 .. setting:: CONCURRECY_MANUAL_TRIGGERS
