@@ -38,29 +38,31 @@ def test_conflict(model_class):
 @pytest.mark.django_db(transaction=True)
 @with_std_models
 def test_do_not_check_if_no_version(model_class):
-    id = next(unique_id)
-    instance, __ = model_class.objects.get_or_create(pk=id)
-    instance.save()
 
-    copy = refetch(instance)
-    copy.save()
-
-    with pytest.raises(RecordModifiedError):
-        _set_version(instance, 1)
-        instance.version = 1
+    with override_settings(CONCURRENCY_VERSION_FIELD_REQUIRED=False):
+        id = next(unique_id)
+        instance, __ = model_class.objects.get_or_create(pk=id)
         instance.save()
 
-    _set_version(instance, 0)
-    instance.save()
-    assert instance.get_concurrency_version() > 0
-    assert instance.get_concurrency_version() != copy.get_concurrency_version()
+        copy = refetch(instance)
+        copy.save()
+
+        with pytest.raises(RecordModifiedError):
+            _set_version(instance, 1)
+            instance.version = 1
+            instance.save()
+
+        _set_version(instance, 0)
+        instance.save()
+        assert instance.get_concurrency_version() > 0
+        assert instance.get_concurrency_version() != copy.get_concurrency_version()
 
 
 @pytest.mark.django_db(transaction=True)
 @with_std_models
 def test_conflict_no_version_and_no_skip_flag(model_class):
-    """When IGNORE_DEFAULT is disabled, attempting to update a record with a default version number should fail."""
-    with override_settings(CONCURRENCY_IGNORE_DEFAULT=False):
+    """When VERSION_FIELD_REQUIRED is enabled, attempting to update a record with a default version number should fail."""
+    with override_settings(CONCURRENCY_VERSION_FIELD_REQUIRED=True):
         id = next(unique_id)
         instance, __ = model_class.objects.get_or_create(pk=id)
         instance.save()
