@@ -4,7 +4,7 @@ envlist = d{111}-py{27,34,35,36,py}-{pg,sqlite,mysql},
 
 
 [pytest]
-python_paths=./tests/demoapp/
+python_paths=./tests/demoapp/ src
 django_find_project = false
 DJANGO_SETTINGS_MODULE=demo.settings
 norecursedirs = .tox docs ./demoapp/
